# freertc

./: .env.example  .env.local.prod.example  .gitignore  ARCHITECTURE-PROD.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.prod  LICENSE  QUICKSTART-PROD.md  README.md  docker-compose.prod.yml  package-lock.json  package.json  wrangler.jsonc  wrangler.template.jsonc  wrangler.workers-dev.jsonc
demo/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  wrangler.toml
demo/src/: App.vue  style.css
demo/src/components/: P2pPeer.vue
demo/src/composables/: useP2p.js
demo/src/utils/: browser-stub.js  signalingClient.connectivity.test.js  signalingClient.js  signalingClient.test.js  topic.js
demo/tests/: webrtc.real.e2e.js
public/: app.js  client.html  client.js  index.html  vue-example.html
scripts/: d1-schema.sql  dev-server.mjs  generate-prod-config.mjs  install-wizard.js  non-cloudflare-server.mjs  prod-server.mjs  setup-mongo-indexes.js  validate-config.mjs  wrangler-install-wizard.mjs
src/: auth.js  config.js  errors.js  index.js  kv.js  lib.rs  log.js  protocol.js  rate-limit.js  util.js  validation.js
